[package]
name = "general_notifier"
version = "0.1.0"
authors = ["zak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.5"

[dependencies.tokio]
features = ["rt-multi-thread", "macros"]
version = "1"

[dependencies.sqlx]
features = ["runtime-tokio-rustls", "sqlite"]
version = "0.7"

[dependencies.reqwest]
features = ["rustls-tls", "brotli", "cookies"]
version = "0.11"

[dependencies.serenity]
default-features = false
features = ["cache", "client", "gateway", "http", "model", "standard_framework", "rustls_backend", "utils"]
version = "0.12"

[profile.release]
lto = 'fat'
codegen-units = 1
strip = "symbols"
